policies/network-policies/allow-ingress-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-traffic-ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: allow-ingress
    policy-type: platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: aws-load-balancer-controller
      ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 10254
          protocol: TCP
        - port: 9113
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels: {}
          namespaceSelector:
            matchLabels:
              network-policy: enabled
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-traffic-staging
  namespace: staging
  labels:
    app.kubernetes.io/name: allow-ingress
    policy-type: platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ui
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-traffic-production
  namespace: production
  labels:
    app.kubernetes.io/name: allow-ingress
    policy-type: platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ui
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-aws-alb-traffic
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: allow-ingress
    policy-type: platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alb-health-checks
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: allow-ingress
    policy-type: platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - port: 10254
          protocol: TCP
        - port: 8080
          protocol: TCP
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - port: 10254
          protocol: TCP
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nlb-traffic
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: allow-ingress
    policy-type: platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 100.64.0.0/19
      ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
  egress:
    - to:
        - ipBlock:
            cidr: 100.64.0.0/19
      ports:
        - port: 32531
          protocol: TCP
        - port: 443
          protocol: TCP
